--- a/index.html
+++ b/index.html
@@ -13,11 +13,29 @@
 <body class="bg-pink-50">
   <div id="root"></div>
 
-  <!-- React 18 UMD -->
-  <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-  <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-  <!-- Babel for in-browser JSX compilation (simple, no-build setup) -->
-  <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+  <!-- React 18 UMD（多重備援） -->
+<script src="https://unpkg.com/react@18/umd/react.production.min.js" crossorigin
+  onerror="this.onerror=null;this.src='https://cdn.jsdelivr.net/npm/react@18/umd/react.production.min.js'"></script>
+<script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js" crossorigin
+  onerror="this.onerror=null;this.src='https://cdn.jsdelivr.net/npm/react-dom@18/umd/react-dom.production.min.js'"></script>
+  <!-- Babel Standalone（備援） -->
+<script src="https://unpkg.com/babel-standalone@6/babel.min.js"
+  onerror="this.onerror=null;this.src='https://cdn.jsdelivr.net/npm/babel-standalone@6/babel.min.js'"></script>
+
+  <script>
+  // 若外部庫載不到，給出提示（避免只看到空白/粉色）
+  setTimeout(function () {
+    if (!window.React || !window.ReactDOM || !window.Babel) {
+      document.body.innerHTML =
+        '<div style="padding:24px;font-family:system-ui;line-height:1.6">' +
+        '外部程式庫載入失敗（可能被網路或內容阻擋擋住）。<br>' +
+        '請改用完整網址 <b>https://lia-liao617.github.io/mina.github.io/</b>、' +
+        '換網路/關閉內容阻擋或用無痕模式再試。<br>' +
+        '若仍失敗，回覆我，我幫你做不依賴 CDN 的版本。' +
+        '</div>';
+    }
+  }, 2500);
+</script>
 
   <script type="text/babel">
     const { useState, useEffect, useMemo, useRef } = React;
