--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script src="./vendor/react-dom.production.min.js"></script>
 <script src="./vendor/babel.min.js"></script>
   
-  <script type="text/babel">
+  <script type="text/babel" data-presets="env,react">
     const { useState, useEffect, useMemo, useRef } = React;
     const ab2b64 = (buffer) => { const bytes = new Uint8Array(buffer); let binary = ""; for (let i = 0; i < bytes.byteLength; i++) binary += String.fromCharCode(bytes[i]); return btoa(binary); };
     const b642ab = (b64) => { const binary = atob(b64); const bytes = new Uint8Array(binary.length); for (let i = 0; i < binary.length; i++) bytes[i] = binary.charCodeAt(i); return bytes.buffer; };
@@ -88,6 +88,216 @@
       const reorder=(from,to)=>{ if(from===to||from==null||to==null) return; const arr=[...templates]; const [item]=arr.splice(from,1); arr.splice(to,0,item); setTemplates(arr); };
       return (<div className="fixed inset-0 bg-black/40 backdrop-blur-sm flex items-center justify-center z-50"><div className="w-full sm:max-w-lg bg-white rounded-2xl shadow-xl max-h-[90svh] sm:max-h-[90vh] overflow-hidden flex flex-col"><div className="flex items-center justify-between px-4 sm:px-6 py-3 border-b shrink-0"><div className="font-semibold">編輯每日模板</div><button onClick={onClose} className="text-gray-500 hover:text-gray-700">✕</button></div><div className="flex-1 overflow-y-auto p-4 sm:p-6 space-y-4"><div className="flex items-center gap-2"><input value={newItem} onChange={(e)=>setNewItem(e.target.value)} onKeyDown={(e)=>{ if(e.key==='Enter') add(); }} placeholder="輸入模板項目，Enter 新增" className="flex-1 border rounded-xl px-3 py-2 focus:outline-none focus:ring-2 focus:ring-emerald-300" /><button onClick={add} className="px-3 py-2 rounded-xl bg-emerald-500 text-white text-sm">新增</button></div>{templates?.length?(<ul className="space-y-2">{templates.map((t,i)=>(<li key={i} className="flex items-center gap-2 p-2 rounded-lg border bg-white" draggable onDragStart={()=>setDragIdx(i)} onDragOver={(e)=>e.preventDefault()} onDrop={()=>{ if(dragIdx!=null && dragIdx!==i) reorder(dragIdx,i); setDragIdx(null); }}><span className="cursor-grab select-none px-1 text-gray-400">⋮⋮</span><input className="flex-1 bg-transparent focus:outline-none" value={t} onChange={(e)=>update(i, e.target.value)} /><button onClick={()=>del(i)} className="text-xs text-red-600 hover:underline">刪除</button></li>))}</ul>):(<div className="text-xs text-gray-400">還沒有模板，先新增幾個常用項目吧（例如：喝 2000ml 水、30 分鐘運動、閱讀 20 分鐘⋯⋯）。</div>)}</div><div className="flex items-center justify-end gap-2 px-4 sm:px-6 py-3 border-t bg-white/95 backdrop-blur sticky bottom-0 shrink-0"><button onClick={onClose} className="px-3 py-2 rounded-xl bg-gray-100 hover:bg-gray-200">取消</button><button onClick={async()=>{ await saveTemplates(templates); onClose(); }} className="px-4 py-2 rounded-xl bg-emerald-500 text-white hover:bg-emerald-600">儲存模板</button></div></div></div>);
     }
+
+function DiaryApp({ monthDate, setMonthDate, selectedDate, setSelectedDate, cryptoKey, logout, resetAll }) {
+  const year = monthDate.getFullYear();
+  const month = monthDate.getMonth();
+  const cells = React.useMemo(() => getMonthMatrix(year, month), [year, month]);
+
+  const [refreshKey, setRefreshKey] = React.useState(0);
+
+  // 當月哪些日期有資料（畫小紅點）
+  const entryMap = React.useMemo(() => {
+    const map = new Set();
+    const daysInMonth = new Date(year, month + 1, 0).getDate();
+    for (let d = 1; d <= daysInMonth; d++) {
+      const k = `${LS_PREFIX}${year}-${String(month + 1).padStart(2, "0")}-${String(d).padStart(2, "0")}`;
+      if (localStorage.getItem(k)) map.add(d);
+    }
+    return map;
+  }, [year, month, selectedDate, refreshKey]);
+
+  const today = new Date();
+  const todayStr = toDateStr(today);
+
+  // 讀寫每日條目（加密）
+  const readEntry = async (dateStr) => {
+    const raw = localStorage.getItem(`${LS_PREFIX}${dateStr}`);
+    if (!raw) return null;
+    const payload = JSON.parse(raw);
+    const obj = await decryptJSON(payload, cryptoKey);
+    if (!Array.isArray(obj.tasks)) obj.tasks = [];
+    if (!Array.isArray(obj.images)) obj.images = [];
+    if (!Array.isArray(obj.stickers)) obj.stickers = [];
+    return obj;
+  };
+  const writeEntry = async (dateStr, obj) => {
+    const payload = await encryptJSON(obj, cryptoKey);
+    localStorage.setItem(`${LS_PREFIX}${dateStr}`, JSON.stringify(payload));
+    setRefreshKey((v) => v + 1);
+  };
+
+  // 模板（加密）
+  const readTemplates = async () => {
+    const raw = localStorage.getItem(LS_TEMPLATES);
+    if (!raw) return [];
+    try { return await decryptJSON(JSON.parse(raw), cryptoKey); } catch { return []; }
+  };
+  const writeTemplates = async (arr) => {
+    const payload = await encryptJSON(arr, cryptoKey);
+    localStorage.setItem(LS_TEMPLATES, JSON.stringify(payload));
+  };
+
+  // 自訂貼圖庫（加密）
+  const readCustomStickers = async () => {
+    const raw = localStorage.getItem(LS_CSTICKERS);
+    if (!raw) return [];
+    try { return await decryptJSON(JSON.parse(raw), cryptoKey); } catch { return []; }
+  };
+  const writeCustomStickers = async (arr) => {
+    const payload = await encryptJSON(arr, cryptoKey);
+    localStorage.setItem(LS_CSTICKERS, JSON.stringify(payload));
+  };
+
+  // 匯出/匯入
+  const importRef = React.useRef(null);
+  const exportBackup = () => {
+    const data = {};
+    for (const k of Object.keys(localStorage)) if (k.startsWith(LS_PREFIX)) data[k] = localStorage.getItem(k);
+    const blob = new Blob([JSON.stringify({ _meta: { when: new Date().toISOString() }, data }, null, 2)], { type: "application/json" });
+    const url = URL.createObjectURL(blob); const a = document.createElement("a");
+    a.href = url; a.download = `mood-diary-backup-${Date.now()}.json`; a.click(); URL.revokeObjectURL(url);
+  };
+  const importBackup = async (file) => {
+    try {
+      const text = await file.text(); const parsed = JSON.parse(text);
+      if (!parsed?.data || typeof parsed.data !== "object") throw new Error("格式錯誤");
+      if (!confirm("匯入將覆蓋現有相同鍵值的資料，繼續嗎？")) return;
+      for (const [k, v] of Object.entries(parsed.data)) localStorage.setItem(k, v);
+      alert("匯入成功。");
+      setRefreshKey((v) => v + 1); refreshToday(); refreshOverdue(); loadTemplates();
+    } catch (e) { console.error(e); alert("匯入失敗：格式不正確或檔案損毀。"); }
+  };
+
+  // 今天待辦（首頁卡片）
+  const [todayTasks, setTodayTasks] = React.useState([]);
+  const [newTaskText, setNewTaskText] = React.useState("");
+  const refreshToday = async () => { const obj = await readEntry(todayStr); setTodayTasks(obj?.tasks || []); };
+  React.useEffect(() => { refreshToday(); }, [cryptoKey]);
+
+  const mutateToday = async (mutator) => {
+    const obj = (await readEntry(todayStr)) || { text: "", images: [], stickers: [], tasks: [], lastModified: Date.now() };
+    const newObj = mutator({ ...obj, tasks: Array.isArray(obj.tasks) ? obj.tasks : [] });
+    newObj.lastModified = Date.now();
+    await writeEntry(todayStr, newObj);
+    setTodayTasks(newObj.tasks);
+  };
+  const addTodayTask = async () => { const t = newTaskText.trim(); if (!t) return;
+    await mutateToday((o) => ({ ...o, tasks: [{ id: Date.now() + Math.random(), text: t, done: false }, ...o.tasks] })); setNewTaskText(""); };
+  const toggleTodayTask = async (id) => { await mutateToday((o) => ({ ...o, tasks: o.tasks.map((it) => (it.id === id ? { ...it, done: !it.done } : it)) })); };
+  const updateTodayTaskText = async (id, text) => { await mutateToday((o) => ({ ...o, tasks: o.tasks.map((it) => (it.id === id ? { ...it, text } : it)) })); };
+  const removeTodayTask = async (id) => { await mutateToday((o) => ({ ...o, tasks: o.tasks.filter((it) => it.id !== id) })); };
+  const reorderTodayTasks = async (fromId, toId) => { await mutateToday((o) => ({ ...o, tasks: reorderByIds(o.tasks, fromId, toId) })); };
+
+  // 逾期/跨日提醒（最近 7 天未完成）
+  const [overdue, setOverdue] = React.useState([]);
+  const refreshOverdue = async () => {
+    const list = [];
+    for (let i = 1; i <= 7; i++) {
+      const d = new Date(today); d.setDate(today.getDate() - i);
+      const ds = toDateStr(d); const o = await readEntry(ds);
+      if (o?.tasks?.length) for (const t of o.tasks) if (!t.done) list.push({ dateStr: ds, id: t.id, text: t.text });
+    }
+    setOverdue(list);
+  };
+  React.useEffect(() => { refreshOverdue(); }, [cryptoKey, refreshKey]);
+
+  const carryOneToToday = async (item, alsoComplete = true) => {
+    await mutateToday((o) => ({ ...o, tasks: [{ id: Date.now() + Math.random(), text: item.text, done: false }, ...o.tasks] }));
+    if (alsoComplete) {
+      const src = await readEntry(item.dateStr);
+      if (src) { src.tasks = src.tasks.map((x) => (x.id === item.id ? { ...x, done: true } : x)); src.lastModified = Date.now(); await writeEntry(item.dateStr, src); }
+    }
+    refreshOverdue();
+  };
+  const carryAllOverdue = async (alsoComplete = true) => { for (const it of overdue) await carryOneToToday(it, alsoComplete); };
+
+  // 模板
+  const [templates, setTemplates] = React.useState([]);
+  const [templateOpen, setTemplateOpen] = React.useState(false);
+  const loadTemplates = async () => setTemplates(await readTemplates());
+  React.useEffect(() => { loadTemplates(); }, [cryptoKey]);
+  const applyTemplatesToToday = async () => {
+    if (!templates.length) return alert("目前沒有模板項目，可先到『編輯模板』新增。");
+    await mutateToday((o) => ({ ...o, tasks: [ ...templates.map((t) => ({ id: Date.now() + Math.random(), text: t, done: false })), ...o.tasks ] }));
+  };
+
+  const goPrev = () => setMonthDate(new Date(year, month - 1, 1));
+  const goNext = () => setMonthDate(new Date(year, month + 1, 1));
+  const openDay = (d) => setSelectedDate(d);
+  const openToday = () => setSelectedDate(today);
+
+  return (
+    <div className="min-h-screen bg-gradient-to-b from-white to-pink-50 p-4 sm:p-8">
+      <div className="mx-auto max-w-5xl">
+        <header className="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-4 mb-6">
+          <div>
+            <h1 className="text-2xl sm:text-3xl font-bold">心情日記</h1>
+            <p className="text-xs text-gray-500 mt-1">🔐 已加密 · 儲存在此瀏覽器</p>
+          </div>
+          <div className="flex flex-wrap items-center gap-2">
+            <button onClick={() => exportBackup()} className="px-3 py-2 rounded-xl bg-gray-800 text-white text-sm hover:opacity-90">備份</button>
+            <button onClick={() => importRef.current && importRef.current.click()} className="px-3 py-2 rounded-xl bg-gray-200 text-sm hover:opacity-90">匯入</button>
+            <input ref={importRef} type="file" accept="application/json" className="hidden" onChange={(e) => e.target.files && e.target.files[0] && importBackup(e.target.files[0])} />
+            <button onClick={applyTemplatesToToday} className="px-3 py-2 rounded-xl bg-emerald-500 text-white text-sm hover:bg-emerald-600">套用模板到今天</button>
+            <button onClick={() => setTemplateOpen(true)} className="px-3 py-2 rounded-xl bg-emerald-100 text-emerald-800 text-sm hover:bg-emerald-200">編輯模板</button>
+            <button onClick={openToday} className="px-3 py-2 rounded-xl bg-pink-500 text-white text-sm hover:bg-pink-600">今天日記</button>
+            <button onClick={logout} className="px-3 py-2 rounded-xl bg-purple-500 text-white text-sm hover:bg-purple-600">登出</button>
+            <button onClick={resetAll} className="px-3 py-2 rounded-xl bg-red-500 text-white text-sm hover:bg-red-600">重設（清空）</button>
+          </div>
+        </header>
+
+        <TodayTasksCard
+          dateStr={todayStr}
+          tasks={todayTasks}
+          newTaskText={newTaskText}
+          setNewTaskText={setNewTaskText}
+          addTask={addTodayTask}
+          toggleTask={toggleTodayTask}
+          updateTaskText={updateTodayTaskText}
+          removeTask={removeTodayTask}
+          reorderTasks={reorderTodayTasks}
+          openToday={openToday}
+        />
+
+        <OverdueCard overdue={overdue} carryOne={carryOneToToday} carryAll={carryAllOverdue} />
+
+        <div className="bg-white/80 backdrop-blur rounded-2xl shadow p-4 sm:p-6 mt-4">
+          <div className="flex items-center justify-between mb-4">
+            <button onClick={goPrev} className="px-3 py-1.5 rounded-lg bg-gray-100 hover:bg-gray-200">← 上個月</button>
+            <div className="font-semibold text-lg">{year} 年 {month + 1} 月</div>
+            <button onClick={goNext} className="px-3 py-1.5 rounded-lg bg-gray-100 hover:bg-gray-200">下個月 →</button>
+          </div>
+          <CalendarGrid cells={cells} entryMap={entryMap} todayStr={todayStr} onPick={openDay} />
+        </div>
+
+        {selectedDate && (
+          <EntryModal
+            date={selectedDate}
+            onClose={() => setSelectedDate(null)}
+            onChanged={() => { if (toDateStr(selectedDate) === todayStr) refreshToday(); setRefreshKey((v) => v + 1); refreshOverdue(); }}
+            cryptoKey={cryptoKey}
+            readCustomStickers={readCustomStickers}
+            writeCustomStickers={writeCustomStickers}
+          />
+        )}
+
+        {templateOpen && (
+          <TemplateModal
+            onClose={() => setTemplateOpen(false)}
+            templates={templates}
+            setTemplates={setTemplates}
+            saveTemplates={async (arr) => { await writeTemplates(arr); setTemplates(arr); }}
+          />
+        )}
+
+        <footer className="text-center text-xs text-gray-400 mt-6">
+          <p>小提醒：大量照片/貼圖會佔用瀏覽器空間，建議不定期備份與清理。</p>
+        </footer>
+      </div>
+    </div>
+  );
+}
 
     function DiaryShell(){
       const [unlocked,setUnlocked]=useState(false);
